==> arribada/horizon/firmware/v3/ports/nrf52840/syshal/syshal_uart.c <==
#include <string.h>
#include "syshal_uart.h"
#include "syshal_pmu.h"
#include "syshal_gpio.h"
#include "nrfx_timer.h"
#include "ring_buffer.h"
#include "debug.h"
#include "bsp.h"
#define UART_TX_TEMP_BUFFER_SIZE (1024)
#define UART_TX_TIMEOUT_MS (200)

int syshal_uart_init(uint32_t instance)
{
    if (instance >= UART_TOTAL_NUMBER)
        return SYSHAL_UART_ERROR_INVALID_INSTANCE;

    // Setup rx buffer
    rb_init(&rx_buffer[instance], UART_RX_BUF_SIZE, &rx_data[instance][0]);

    // Turn off output buffering. This ensures printf prints immediately
    if (instance == UART_DEBUG)
        setvbuf(stdout, NULL, _IONBF, 0);

    apply_config(instance, &UART_Inits[instance].uarte, &UART_Inits[instance].uarte_config);

    nrf_uarte_event_clear(UART_Inits[instance].uarte.p_reg, NRF_UARTE_EVENT_ENDRX);
    nrf_uarte_event_clear(UART_Inits[instance].uarte.p_reg, NRF_UARTE_EVENT_ENDTX);
    nrf_uarte_event_clear(UART_Inits[instance].uarte.p_reg, NRF_UARTE_EVENT_ERROR);
    nrf_uarte_event_clear(UART_Inits[instance].uarte.p_reg, NRF_UARTE_EVENT_RXTO);
    nrf_uarte_int_enable(UART_Inits[instance].uarte.p_reg, NRF_UARTE_INT_ENDRX_MASK);

    NRFX_IRQ_PRIORITY_SET(nrfx_get_irq_number(UART_Inits[instance].uarte.p_reg), UART_Inits[instance].uarte_config.interrupt_priority);
    NRFX_IRQ_ENABLE(nrfx_get_irq_number(UART_Inits[instance].uarte.p_reg));

    nrf_uarte_enable(UART_Inits[instance].uarte.p_reg);

    // Only enable continous reception if hardware flow control is disabled
    if (NRF_UARTE_HWFC_DISABLED == UART_Inits[instance].uarte_config.hwfc)
        nrf_uarte_shorts_enable(UART_Inits[instance].uarte.p_reg, NRF_UARTE_SHORT_ENDRX_STARTRX);

    rx_pending[instance] = true;
    nrf_uarte_rx_buffer_set(UART_Inits[instance].uarte.p_reg, (uint8_t *) &rx_byte[instance], 1);
    nrf_uarte_task_trigger(UART_Inits[instance].uarte.p_reg, NRF_UARTE_TASK_STARTRX);

    is_init[instance] = true;

    return SYSHAL_UART_NO_ERROR;
}

int syshal_uart_term(uint32_t instance)
{
    if (instance >= UART_TOTAL_NUMBER)
        return SYSHAL_UART_ERROR_INVALID_INSTANCE;

#define DISABLE_ALL UINT32_MAX
    nrf_uarte_shorts_disable(UART_Inits[instance].uarte.p_reg, DISABLE_ALL);
#undef DISABLE_ALL

    is_init[instance] = false;

    nrf_uarte_disable(UART_Inits[instance].uarte.p_reg);

    nrf_uarte_task_trigger(UART_Inits[instance].uarte.p_reg, NRF_UARTE_TASK_STOPRX);
    nrf_uarte_task_trigger(UART_Inits[instance].uarte.p_reg, NRF_UARTE_TASK_STOPTX);

    nrf_uarte_int_disable(UART_Inits[instance].uarte.p_reg, NRF_UARTE_INT_ENDRX_MASK |
                          NRF_UARTE_INT_ENDTX_MASK |
                          NRF_UARTE_INT_ERROR_MASK |
                          NRF_UARTE_INT_RXTO_MASK);
    NRFX_IRQ_DISABLE(nrfx_get_irq_number(UART_Inits[instance].uarte.p_reg));

    pins_to_default(&UART_Inits[instance].uarte);

    // [NGPT-475] Power cycle the UART peripheral to ensure the lowest current consumption is achieved
    // See https://devzone.nordicsemi.com/f/nordic-q-a/26030/how-to-reach-nrf52840-uarte-current-supply-specification
    if (instance == UART_0)
    {
        *(volatile uint32_t *)0x40002FFC = 0;
        *(volatile uint32_t *)0x40002FFC;
        *(volatile uint32_t *)0x40002FFC = 1;
    }
    else if (instance == UART_1)
    {
        *(volatile uint32_t *)0x40028FFC = 0;
        *(volatile uint32_t *)0x40028FFC;
        *(volatile uint32_t *)0x40028FFC = 1;
    }

    rx_pending[instance] = false;

    // We may or may not want to clear the ringbuffer here with rb_reset()
    // It is worth noting that the original STM32 code did not do this

    return SYSHAL_UART_NO_ERROR;
}

int syshal_uart_change_baud(uint32_t instance, uint32_t baudrate)
{
    if (instance >= UART_TOTAL_NUMBER)
        return SYSHAL_UART_ERROR_INVALID_INSTANCE;

    DEBUG_PR_TRACE("syshal_uart_change_baud(UART_%lu, %lu)", instance, baudrate);

    nrf_uarte_baudrate_t nrf_baudrate;

    switch (baudrate)
    {
        case 1200:
            nrf_baudrate = NRF_UARTE_BAUDRATE_1200;
            break;
        case 2400:
            nrf_baudrate = NRF_UARTE_BAUDRATE_2400;
            break;
        case 4800:
            nrf_baudrate = NRF_UARTE_BAUDRATE_4800;
            break;
        case 9600:
            nrf_baudrate = NRF_UARTE_BAUDRATE_9600;
            break;
        case 14400:
            nrf_baudrate = NRF_UARTE_BAUDRATE_14400;
            break;
        case 19200:
            nrf_baudrate = NRF_UARTE_BAUDRATE_19200;
            break;
        case 28800:
            nrf_baudrate = NRF_UARTE_BAUDRATE_28800;
            break;
        case 31250:
            nrf_baudrate = NRF_UARTE_BAUDRATE_31250;
            break;
        case 38400:
            nrf_baudrate = NRF_UARTE_BAUDRATE_38400;
            break;
        case 56000:
            nrf_baudrate = NRF_UARTE_BAUDRATE_56000;
            break;
        case 57600:
            nrf_baudrate = NRF_UARTE_BAUDRATE_57600;
            break;
        case 76800:
            nrf_baudrate = NRF_UARTE_BAUDRATE_76800;
            break;
        case 115200:
            nrf_baudrate = NRF_UARTE_BAUDRATE_115200;
            break;
        case 230400:
            nrf_baudrate = NRF_UARTE_BAUDRATE_230400;
            break;
        case 250000:
            nrf_baudrate = NRF_UARTE_BAUDRATE_250000;
            break;
        case 460800:
            nrf_baudrate = NRF_UARTE_BAUDRATE_460800;
            break;
        case 921600:
            nrf_baudrate = NRF_UARTE_BAUDRATE_921600;
            break;
        case 1000000:
            nrf_baudrate = NRF_UARTE_BAUDRATE_1000000;
            break;

        default:
            nrf_baudrate = NRF_UARTE_BAUDRATE_9600;
            break;
    }

    nrf_uarte_baudrate_set(UART_Inits[instance].uarte.p_reg, nrf_baudrate);
    set_baudrate[instance] = nrf_baudrate;

    return SYSHAL_UART_NO_ERROR;
}

int syshal_uart_send(uint32_t instance, uint8_t * data, uint32_t size)
{
    if (instance >= UART_TOTAL_NUMBER)
        return SYSHAL_UART_ERROR_INVALID_INSTANCE;

    if (!size)
        return SYSHAL_UART_ERROR_INVALID_SIZE;

    if (nrfx_is_in_ram(data))
    {
        if (!uart_tx_send(instance, data, size))
            return SYSHAL_UART_ERROR_TIMEOUT;
    }
    else
    {
        // UARTE only allows transfers from RAM so we must copy it there
        while (size)
        {
            uint8_t ram_buffer[UART_TX_TEMP_BUFFER_SIZE];
            uint32_t bytes_to_transfer = MIN(size, UART_TX_TEMP_BUFFER_SIZE);

            memcpy(ram_buffer, data, bytes_to_transfer);

            if (!uart_tx_send(instance, ram_buffer, bytes_to_transfer))
                return SYSHAL_UART_ERROR_TIMEOUT;

            size -= bytes_to_transfer;
        }
    }

    return SYSHAL_UART_NO_ERROR;
}
