==> arribada/horizon/firmware/v3/ports/stm32/syshal/syshal_uart.c <==
#include <errno.h>
#include <sys/unistd.h> // STDOUT_FILENO, STDERR_FILENO
#include "stm32f0xx_hal.h"
#include "syshal_gpio.h"
#include "syshal_uart.h"
#include "ring_buffer.h"
#include "debug.h"

int syshal_uart_init(uint32_t instance)
{
    HAL_StatusTypeDef status;

    if (instance >= UART_TOTAL_NUMBER)
        return SYSHAL_UART_ERROR_INVALID_INSTANCE;

    // Populate internal handlers from bsp
    huart_handles[instance].Instance = UART_Inits[instance].Instance;
    huart_handles[instance].Init = UART_Inits[instance].Init;

    // Setup rx buffer
    rb_init(&rx_buffer[instance], UART_RX_BUF_SIZE, &rx_data[instance][0]);

#ifndef DEBUG_DISABLED
#ifdef PRINTF_UART
    // Turn off buffers. This ensure printf prints immediately
    if (instance == PRINTF_UART)
    {
        setvbuf(stdin, NULL, _IONBF, 0);
        setvbuf(stdout, NULL, _IONBF, 0);
        setvbuf(stderr, NULL, _IONBF, 0);
    }
#endif
#endif

    status = HAL_UART_Init(&huart_handles[instance]);

    return hal_error_map[status];
}

int syshal_uart_change_baud(uint32_t instance, uint32_t baudrate)
{
    if (instance >= UART_TOTAL_NUMBER)
        return SYSHAL_UART_ERROR_INVALID_INSTANCE;

    DEBUG_PR_TRACE("Changing baudrate on UART_%lu to %lu", instance + 1, baudrate);

    HAL_StatusTypeDef status;

    // Populate internal handlers from bsp
    huart_handles[instance].Instance = UART_Inits[instance].Instance;
    huart_handles[instance].Init = UART_Inits[instance].Init;
    huart_handles[instance].Init.BaudRate = baudrate;

    status = HAL_UART_Init(&huart_handles[instance]);

    return hal_error_map[status];
}

int syshal_uart_term(uint32_t instance)
{
    HAL_StatusTypeDef status;

    if (instance >= UART_TOTAL_NUMBER)
        return SYSHAL_UART_ERROR_INVALID_INSTANCE;

    status = HAL_UART_DeInit(&huart_handles[instance]);

    return hal_error_map[status];
}

int syshal_uart_send(uint32_t instance, uint8_t * data, uint32_t size)
{
    if (!size)
        return SYSHAL_UART_ERROR_INVALID_SIZE;

    HAL_StatusTypeDef status;

    // Wait for UART to be free
    if (UART_WaitOnFlagUntilTimeout(&huart_handles[instance], UART_FLAG_TXE, RESET, HAL_GetTick(), UART_TIMEOUT) != HAL_OK)
        return SYSHAL_UART_ERROR_TIMEOUT;

    status = HAL_UART_Transmit(&huart_handles[instance], data, size, UART_TIMEOUT);

    return hal_error_map[status];
}
